# tsseg

./: .env.example  .gitignore  AUTOPATCH_README.md  MANIFEST.in  Makefile  README.md  environment.yml  install_autopatch.py  pyproject.toml
.github/workflows/: ci.yml  docs.yml
c/Rbeast/: .gitignore  Makefile
c/Rbeast/ext_src/: abc_001_config.h
c/autoplait/: cps.c
demo/: __init__.py  algorithms.py  app.py  data.py  plotting.py  utils.py
docs/: changelog.rst  conf.py  index.rst  intro.rst
docs/api/: index.rst  metrics.rst  modules.rst  overview.rst  tsseg.algorithms.amoc.rst  tsseg.algorithms.autoplait.rst  tsseg.algorithms.beast.rst  tsseg.algorithms.binseg.rst  tsseg.algorithms.bocd.rst  tsseg.algorithms.bottomup.rst  tsseg.algorithms.changefinder.rst  tsseg.algorithms.clap.rst  tsseg.algorithms.dynp.rst  tsseg.algorithms.e2usd.rst  tsseg.algorithms.eagglo.rst  tsseg.algorithms.espresso.rst  tsseg.algorithms.fluss.rst  tsseg.algorithms.ggs.rst  tsseg.algorithms.hdp_hsmm.rst  tsseg.algorithms.hidalgo.rst  tsseg.algorithms.hmm.rst  tsseg.algorithms.icid.rst  tsseg.algorithms.igts.rst  tsseg.algorithms.kcpd.rst  tsseg.algorithms.patss.algorithms.rst  tsseg.algorithms.patss.embedding.rst  tsseg.algorithms.patss.rst  tsseg.algorithms.patss.segmentation.rst  tsseg.algorithms.pelt.rst  tsseg.algorithms.prophet.rst  tsseg.algorithms.random.rst  tsseg.algorithms.rst  tsseg.algorithms.ruptures.rst  tsseg.algorithms.tglad.rst  tsseg.algorithms.ticc.rst  tsseg.algorithms.time2state.rst  tsseg.algorithms.tire.rst  tsseg.algorithms.tirex.rst  tsseg.algorithms.tscp2.rst  tsseg.algorithms.vqtss.rst  (+4 more)
docs/guides/: contributing.rst  datasets.rst  detectors.rst  getting-started.md
tests/: README.md  test_benchmark_algos.py  test_datasets.py  test_metrics.py  test_param_schema.py
tests/algorithms/: conftest.py  test_common.py  test_fit_predict.py  test_igts_validation.py  test_input_validation.py  test_instantiation.py  test_predict.py  test_synthetic.py  test_tags.py  test_vsax.py
tsseg/: __init__.py
tsseg/algorithms/: __init__.py  base.py  param_schema.py  utils.py
tsseg/algorithms/amoc/: README.md  __init__.py  detector.py
tsseg/algorithms/autoplait/: README.md  __init__.py  autoplait_c.py  detector.py
tsseg/algorithms/autoplait/deprecated/: autoplait_python.py  detector_python.py
tsseg/algorithms/beast/: README.md  detector.py
tsseg/algorithms/binseg/: README.md  __init__.py  detector.py  detector_aeon.py
tsseg/algorithms/bocd/: README.md  __init__.py  bayesian_models.py  detector.py  readme.md
tsseg/algorithms/bottomup/: README.md  __init__.py  detector.py
tsseg/algorithms/changefinder/: README.md  __init__.py  detector.py  sdar.py
tsseg/algorithms/clap/: README.md  __init__.py  clap.py  clap_detector.py  clasp_detector.py  clasp_knn.py  distance.py  nearest_neighbour.py  scoring.py  segmentation.py  utils.py  validation.py  window_size.py
tsseg/algorithms/dynp/: README.md  __init__.py  detector.py
tsseg/algorithms/e2usd/: README.md  __init__.py  detector.py  e2usd.py
tsseg/algorithms/eagglo/: README.md  __init__.py  detector.py
tsseg/algorithms/espresso/: README.md  __init__.py  detector.py  detector_matlab.py  detector_old.py
tsseg/algorithms/espresso/python/: ESPRESSO_Script.py  __init__.py  calcScore.py  calculateMotifDensityMatrix.py  calculateScore.py  calculateSemanticDensityMatrix.py  runSegmentation.py  separateGreedyIG.py
tsseg/algorithms/fluss/: README.md  __init__.py  detector.py
tsseg/algorithms/ggs/: LICENSE  README.md  __init__.py  detector.py
tsseg/algorithms/hdp_hsmm/: README.md  __init__.py  detector.py  legacy_detector.py  legacy_pyhsmm.py
tsseg/algorithms/hdp_hsmm/deprecated/: legacy_detector.py  legacy_pyhsmm.py
tsseg/algorithms/hidalgo/: README.md  __init__.py  detector.py
tsseg/algorithms/hmm/: README.md  __init__.py  detector.py
tsseg/algorithms/icid/: LICENSE  README.md  __init__.py  detector.py
tsseg/algorithms/icid/matlab/: Readme.md  demo.m  demo.mlx
tsseg/algorithms/igts/: README.md  __init__.py  detector.py  legacy_detector.py
tsseg/algorithms/kcpd/: README.md  __init__.py  detector.py
tsseg/algorithms/patss/: LICENCE  README.md  __init__.py  detector.py
tsseg/algorithms/patss/algorithms/: PaTSS_perso.py
tsseg/algorithms/patss/embedding/: FrequentPatternMiningEmbedder.py  PatternBasedEmbedder.py  pattern_mining.py
tsseg/algorithms/pelt/: README.md  __init__.py  detector.py
tsseg/algorithms/prophet/: README.md  __init__.py  detector.py
tsseg/algorithms/random/: README.md  __init__.py  detector.py
tsseg/algorithms/ruptures/: LICENSE  README.md  __init__.py  base.py  exceptions.py
tsseg/algorithms/ruptures/costs/: __init__.py  cosine.py  factory.py  l1.py  l2.py  linear.py  normal.py  rbf.py
tsseg/algorithms/ruptures/detection/: __init__.py  binseg.py  bottomup.py  dynp.py  kernelcpd.py  pelt.py  window.py
tsseg/algorithms/ruptures/utils/: __init__.py  bnode.py  path.py  peaks.py  utils.py
tsseg/algorithms/tglad/: README.md  __init__.py  detector.py
tsseg/algorithms/ticc/: README.md  __init__.py  detector.py  ticc.py
tsseg/algorithms/time2state/: README.md  __init__.py  detector.py  time2state.py
tsseg/algorithms/tire/: README.md  __init__.py  detector.py  utils.py
tsseg/algorithms/tire/old/: TIRE.py  (+1 more)
tsseg/algorithms/tirex/: README.md  __init__.py  detector.py
tsseg/algorithms/tscp2/: README.md  __init__.py  detector.py  losses.py  network.py
tsseg/algorithms/tsfm/: detector.py
tsseg/algorithms/vqtss/: README.md  __init__.py  detector.py  evaluate_vqtss_mocap.py  network.py
tsseg/algorithms/vsax/: README.md  __init__.py  breakpoints.py  detector.py
tsseg/algorithms/window/: README.md  __init__.py  detector.py
tsseg/data/: README.md  datasets.py
tsseg/data/mocap/: 86_01.csv  86_02.csv  86_03.csv  86_07.csv  86_08.csv  86_09.csv  86_10.csv  86_11.csv  86_14.csv
tsseg/metrics/: README.md  __init__.py  base.py  bidirectional_covering.py  bidirectional_covering_README.md  change_point_detection.py  gaussian_f1.py  gaussian_f1_README.md  state_detection.py
(+12 files in other folders)
