[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tsseg"
version = "0.1.0"
description = "A library for time series segmentation"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
    {name = "Félix Chavelli"},
]
keywords = [
    "time-series",
    "segmentation",
    "change-point",
    "machine-learning",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: GNU Affero General Public License v3 (AGPLv3)",
]
dependencies = [
    "numpy",
    "pandas",
    "scikit-learn",
    "scipy",
    "pooch",
    "tqdm",
    "joblib",
    "statsmodels",
    "future",
]

[project.optional-dependencies]
torch = ["torch"]
prophet = ["prophet"]
patss = [
    "npbad @ git+https://bitbucket.org/len_feremans/pbad_network.git",
    "pybasicbayes @ git+https://github.com/mattjj/pybasicbayes.git",
    "pyhsmm @ git+https://github.com/mattjj/pyhsmm.git",
]
accelerators = [
    "numba",
    "cython",
]
docs = [
    "sphinx>=8.0",
    "sphinx-rtd-theme>=2.0",
    "myst-parser>=3.0",
    "sphinx-autodoc-typehints>=2.2",
]
aeon = ["aeon"]
tscp2 = [
    "tensorflow>=2.16,<2.19",
    "keras-tcn>=3.5.0,<3.6",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "black>=24.8",
    "mypy>=1.10",
    "build>=1.2",
    "twine>=5.1",
    "pre-commit>=3.7",
]
all = [
    "tsseg[torch,prophet,patss,accelerators,docs,aeon,tglad,tscp2]",
]
tglad = [
    "torch>=2.0",
    "networkx>=3.0",
]

[project.urls]
Homepage = "https://github.com/fchavelli/tsseg"
Repository = "https://github.com/fchavelli/tsseg"
Documentation = "https://fchavelli.github.io/tsseg/"
Issues = "https://github.com/fchavelli/tsseg/issues"
Changelog = "https://github.com/fchavelli/tsseg/blob/main/docs/changelog.rst"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["tsseg*"]
exclude = ["tests*", "docs*", "examples*"]

[tool.setuptools.package-data]
"tsseg" = ["**/*"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "UP", # pyupgrade
    "N",  # pep8-naming
]
ignore = [
    "E501", # Line too long (handled by formatter)
    "B008", # Do not perform function calls in argument defaults
    "N803", # Argument name should be lowercase (math notation often uses X)
    "N806", # Variable in function should be lowercase (math notation often uses X, Y)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"] # Ignore unused imports in __init__ files

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
check_untyped_defs = true
disallow_untyped_defs = false # Start with false, aim for true later